# subspace

./: .diff  .dockerignore  .editorconfig  .env  .envrc  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  chain_build.out  docker-compose.yml  docker-compose.yml.tmp  env  finney_plain_spec.json  flake.nix  image.out  mod.py  newton_plain_spec.json  nohup.fam  nohup.out  rust-toolchain.toml  rustfmt.toml  snapshot-old-new.json  snapshot.json  temp-research.md  validator_hyperparameters.md
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
calls/: Cargo.toml
calls/src/: ibc.rs  lib.rs  template.rs
docs/: payment-system.md  treasurey-migration-pr.md  treasury-migration.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  lib.rs  main.rs  manual_seal_service.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
node/src/service/: decrypter.rs  manual_seal.rs
old/: .env
ow_extensions/: Cargo.toml
ow_extensions/src/: lib.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: lib.rs
pallets/governance/: Cargo.toml
pallets/governance/api/: Cargo.toml
pallets/governance/api/src/: lib.rs
pallets/governance/src/: benchmarking.rs  dao.rs  integration_tests.rs  lib.rs  migrations.rs  mock.rs  payments.rs  proposal.rs  senate.rs  tests.rs  voting.rs  weights.rs
pallets/governance/tests/: governance_logic_tests.rs  mock.rs  payments_tests.rs  proposals.rs  registration.rs
pallets/ibc/: Cargo.toml
pallets/ibc-utils/: Cargo.toml
pallets/ibc/src/mock/: mod.rs
pallets/offworker/: Cargo.toml
pallets/offworker/src/: lib.rs  migrations.rs  process.rs  profitability.rs  types.rs  util.rs
pallets/offworker/src/dispatches/: mod.rs
pallets/subnet_emission/: Cargo.toml
pallets/subnet_emission/api/: Cargo.toml
pallets/subnet_emission/api/src/: lib.rs
pallets/subnet_emission/src/: benchmarking.rs  decryption.rs  distribute_emission.rs  lib.rs  migrations.rs  post_runtime.rs  set_weights.rs  types.rs  weights.rs
pallets/subnet_emission/src/consensus/: linear.rs  yuma.rs
pallets/subnet_emission/src/subnet_consensus/: linear.rs  mod.rs  treasury.rs  yuma.rs
pallets/subnet_emission/src/subnet_consensus/util/: consensus.rs  mod.rs  params.rs
pallets/subnet_emission/src/subnet_consensus/yuma/: params.rs
pallets/subnet_emission/src/subnet_pricing/: demo.rs  root.rs
pallets/subspace/: Cargo.toml
pallets/subspace/genesis-config/: Cargo.toml
pallets/subspace/genesis-config/src/: lib.rs
pallets/subspace/rpc/: Cargo.toml
pallets/subspace/rpc/runtime-api/: Cargo.toml
pallets/subspace/rpc/runtime-api/src/: lib.rs
pallets/subspace/rpc/src/: lib.rs
pallets/subspace/runtime-api/: Cargo.toml
pallets/subspace/runtime-api/src/: lib.rs
pallets/subspace/src/: authority.rs  autogen_benchmark.rs  autogen_weights.rs  benchmarking.rs  benchmarks.rs  block_step.rs  config.rs  controller.rs  dispatch.rs  dispatches.rs  epoch.rs  errors.rs  events.rs  genesis.rs  global.rs  hooks.rs  lib.rs  loan.rs  macros.rs  math.rs  migration.rs  migrations.rs  mock.rs  module.rs  network.rs  networks.rs  neuron.rs  neuron_info.rs  profit_share.rs  profitshare.rs  registration.rs  rpc.rs  serving.rs  set_weights.rs  signed_extension.rs  staking.rs  step.rs  subnet.rs  subnet_info.rs  sudo.rs  (+5 more)
pallets/subspace/src/network/: mod.rs  module.rs  params.rs  registration.rs  registration_tests.rs  staking.rs  subnet.rs
pallets/subspace/src/params/: burn.rs  global.rs  mod.rs  module.rs  params.rs  subnet.rs
pallets/subspace/src/selections/: config.rs  dispatches.rs  errors.rs  events.rs  genesis.rs  hooks.rs  mod.rs  storage_v_mainnet.rs  storage_v_testnet.rs  weights.rs
pallets/subspace/src/step/: yuma.rs
pallets/subspace/tests/: burn.rs  delegate_staking.rs  epoch.rs  mock.rs  networks.rs  profit_share.rs  registration.rs  serving.rs  staking.rs  step.rs  step_linear.rs  step_yuma.rs  subnet.rs  subnets.rs  sudo.rs  test_burn.rs  test_delegate_staking.rs  test_epoch.rs  test_mock.rs  test_networks.rs  test_profit_share.rs  test_registration.rs  test_staking.rs  test_step.rs  test_subnets.rs  test_voting.rs  test_weights.rs  voting.rs  weights.rs
pallets/subspace/tests_2/: mock.rs  registration.rs  serving.rs  staking.rs  sudo.rs  weights.rs
pallets/subtensor/: Cargo.toml
pallets/subtensor/src/: lib.rs  registration.rs  serving.rs  step.rs  weights.rs
pallets/subtensor/tests/: mock.rs  registration.rs  serving.rs  step.rs  sudo.rs  weights.rs
pallets/sudo-authorities/: Cargo.toml
pallets/sudo-authorities/src/: lib.rs
pallets/voting/: Cargo.toml
relayer/: Cargo.toml  config.toml
relayer/src/: main.rs
research/: client-side.md  off-worker.md  runtime.md  steps.md
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  precompiles.rs
runtime/src/precompiles/: balance_transfer.rs  ed25519.rs  mod.rs  staking.rs
runtime/src/precompiles/solidity/: balanceTransfer.abi  balanceTransfer.sol  ed25519Verify.abi  ed25519Verify.sol  staking.abi  staking.sol
scripts/: build_runtime_wasm.sh  create_snapshot_hourly.sh  init.sh  install_rust_env.sh  localnet.sh  prepare_runtime_upgrade.py  test_treasury_migration.sh
snapshots/: dev.json  main-genesis.json  main.json  main_old.json  test.json
specs/: dev.json  (+7 more)
tests/: Cargo.toml
tests/src/: emissions.rs  encryption.rs  governance.rs  lib.rs  mock.rs  offworker.rs  registration_eviction_tests.rs  research.rs  root.rs  subnet_emission.rs  subspace.rs  subspace2.rs  subspace_misc.rs
tests/src/data/: sn31_sim.msgpack
tests/src/governance/: payments.rs  proposals.rs
tests/src/offworker/: data.rs  encryption.rs  mod.rs  offworker.rs  util.rs
tests/src/research/: weight_copy.rs
tests/src/subspace/: burn.rs  registration.rs  staking.rs  subnet.rs  weights.rs
tests/src/subspace2/: burn.rs  registration.rs  staking.rs  subnet.rs  weights.rs
xtask/: Cargo.toml  spec.json
xtask/src/: flags.rs  localnet_run.rs  main.rs  mainnet_spec.rs  run.rs
(+41 files in other folders)
