[workspace]
members = [
    "node",
    "pallets/faucet",
    "pallets/governance",
    "pallets/governance/api",
    "pallets/emission",
    "pallets/subspace",
    "pallets/subspace/genesis-config",
    "runtime",
    "tests",
    "xtask",
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "deny"
arithmetic_side_effects = "deny"
indexing_slicing = "deny"
panicking_unwrap = "deny"
out_of_bounds_indexing = "deny"
match_bool = "deny"
infinite_loop = "deny"

[workspace.dependencies]
tokio = "1.17.0"
sha2 = "0.10.8"
rsa = "0.9.4"
async-trait = "0.1"
strum = { version = "0.25", default-features = false, features = ["derive"] }
ed25519-dalek = { version = "2.1.0", default-features = false, features = [
    "alloc",
] }
# External dependencies
bty = { version = "0.2.0", default-features = false }
env_logger = "0.11.3"
futures = "0.3.21"
clap = "4.4.6"
hex = "0.4.3"
jsonrpsee = "0.24"
log = { version = "0.4.21", default-features = false }
parity-util-mem = "0.12.0"
rand = "0.8"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }
smallvec = "1.6.1"

# Parity Substrate
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.9" }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
parity-scale-codec = { version = "3.6.5", features = [
    "derive",
], default-features = false }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }

# EVM Support

# Frontier
fp-account = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false, features = [
    "serde",
] }
fp-rpc = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fp-self-contained = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false, features = [
    "serde",
] }
fp-evm = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false, features = [
    "serde",
] }
fp-dynamic-fee = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }

fc-rpc-core = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-api = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-cli = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-db = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-rpc = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", features = [
    "rpc-binary-search-estimate",
] }
fc-storage = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-mapping-sync = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
fc-consensus = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }

# Frontier FRAME
pallet-base-fee = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-ethereum = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-evm = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/renlabs-dev/frontier", branch = "feat/adjustable-decimals", default-features = false }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-rpc-client = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
