[package]
name = "node-subspace"
version = "1.7.5"
description = "The node implementation for Commune's subspace chain."
authors = ["Commune Community"]
homepage = "https://communeai.org/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"
build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-subspace"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
hex.workspace = true
serde.workspace = true

serde_json.workspace = true

sc-cli.workspace = true
sp-core.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-keystore.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-offchain.workspace = true
sc-consensus-aura.workspace = true
sp-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sp-consensus-grandpa.workspace = true
sc-consensus-manual-seal.workspace = true
sp-consensus.workspace = true
sc-consensus.workspace = true
sc-client-api.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
sp-timestamp.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true

# These dependencies are used for the subspace's RPCs
jsonrpsee = { workspace = true, features = ["server"] }
sc-rpc.workspace = true
sp-api.workspace = true
sc-rpc-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sc-basic-authorship.workspace = true
substrate-frame-rpc-system.workspace = true
pallet-transaction-payment-rpc.workspace = true

# These dependencies are used for runtime benchmarking
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true

# Local Dependencies
node-subspace-runtime.path = "../runtime"

pallet-subspace-genesis-config.path = "../pallets/subspace/genesis-config"
subspace-rpc.path = "../pallets/subspace/rpc"

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"node-subspace-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-subspace-runtime/try-runtime"]
testnet-faucet = ["node-subspace-runtime/testnet-faucet"]
